Tiny: Fix 626411: Use PRIsFP macro instead of %s for path

BUG=626411,543161,427616

Review-Url: https://codereview.chromium.org/2126373002
Cr-Commit-Position: refs/heads/master@{#404262}

Former-commit-id: 31c04917519ee0d0938c9d72c798bc14411bbb31